# docsrs

./: Cargo.toml  lancedb_index.txt
src/: doc.rs  lib.rs
src/doc/: compressed.rs  rawjson.rs
src/doc/parsed/: index.rs
