[package]
name = "docsrs"
version = "0.1.6"
edition = "2024"

license = "MIT"
description = "Easily retrieve docs for any crate on crates.io"
repository = "https://github.com/kingananas20/docsrs"
readme = "README.md"
keywords = ["simple", "docs"]
categories = ["api-bindings"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**/*"
]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "docsrs"
path = "src/main.rs"
required-features = ["fetch"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fuzzy-matcher = "0.3"
log = "0.4"
rustdoc-types = "0.57"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "3.0", optional = true }
url = "2.5"
zstd = "0.13"

[features]
default = []
fetch = ["ureq"]

[dev-dependencies]
env_logger = "0.11.8"
